feat: 적용본 적용은 토큰 미확인
